모바일 수정 1

--- a/css/style.css
+++ b/css/style.css
@@ -40,214 +40,243 @@ section{ clear:both; width:100%; }
 
 @media screen and (max-width:500px){
     
-    section h2{ display: none;}
 
     /* header  -------------------------------------*/
     #header{
-        height:80px;
-        box-sizing:border-box;
+        height: 125px;
+        border: 1px solid #E2E5EC;
+        box-sizing: border-box;
     }
     h1{
-        font-family: yg-jalnan;
-        font-size: 25px;
-        line-height: 80px;
+        font-family: GongGothicMedium;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 125px;
         padding-left: 23px;
     }
     h1 a {
         color: #000;
     }
     .nav_btn{
-        position:fixed;
-        right:10px;
-        top:0;
-    }
-    .fa-bars {
-        font-size: 29px;
-        color: #000;
+        position: fixed;
+        right: 10px;
+        top: 0;
     }
     .nav_btn button, .nav_close_btn button{
-        width:45px;
-        height:45px;
-        margin:17px 10px 0 0;
+        width: 55px;
+        height: 33px;
+        margin: 46px 20px 0 0;
         color: #000;
     }
     .nav_btn button:hover, .nav_close_btn button:hover{
-        background:none;
-        color:#000;
+        background: none;
+        color: #000;
     }
     nav{
-        position:fixed;
-        z-index:1;
-        left:0;
-        top:0;
-        margin-left:-100%;
-        width:100%;
-        height:100%;
-        background: rgb(140 185 172 / 97%);
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        margin-left: -100%;
+        width: 100%;
+        height: 100%;
+        background: rgba(47 113 250 / 97%);
     }
     .nav_close_btn{
-        height:80px;
-        padding-right:10px;
+        height: 125px;
+        padding-right: 10px;
         text-align: right;
     }
     .gnb button{
-        display:block;
-        width:100%;
-        height:60px;
-        font-size:18px;
-        font-weight:bold;
-        color:#fff;
+        display: block;
+        width: 100%;
+        height: 60px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
     }
     .gnb button:hover{
-        background:#fff;
-        color:#000;
+        background: #fff;
+        color: #000;
     }
     
     /*  intro  -------------------------------------*/
     .intro{
-        width:100%;
-        height:100%; 
-        overflow:hidden;
-    }
-    .intro_wrap h2{
-        display:none;
+        overflow: hidden;
+        background: url(../images/b_img_3.png) no-repeat center right;
+        background-position: center 50px;
+        background-size: 80% auto;
+        height: 730px;
     }
     .intro_wrap {
-        padding: 200px 0 0;
         text-align: center;
     }
-
-    .typing-txt {
+    .intro_wrap h2{
         display: none;
     }
-    .typing {
-        /*position: absolute;*/
-        display: inline-block;
-        animation-name: cursor;
-        animation-duration: 1s;
-        animation-iteration-count: infinite;
-        font-size: 26px;
+    .typing-txt span br {
+        display: none;
+    }
+    .typing-txt {
+        margin-top: 78%;
+        font-family: Pretendard;
+    }
+    .typing-txt span:nth-of-type(1) {
+        font-size: 29px;
+        font-weight: 700;
+        color: #222222;
+        line-height: 40px;
+    }
+    .typing-txt span:nth-of-type(2) {
+        font-size: 34px;
+        font-weight: 800;
+        color: #2F71FA;
+    }
+    .typing-txt span:nth-of-type(3) {
+        font-size: 18px;
+        color: #999999;
     }
     
 
-    /*  container  -------------------------------------*/
-
-    #container section:not(:first-child){
-        height:1000px;
-        text-align:center;
-    }
-    
     /*  profile  -------------------------------------*/
 
+    #container section:nth-of-type(2) {
+        height: 1356px;
+        text-align: center;
+    }
+    .profile {
+        background: url(../images/bg_mob_1.png), url(../images/bg_mob_2.png) #2F71FA;
+        color: #fff;
+        background-repeat: no-repeat;
+        background-position: top left -60px, bottom right -60px;
+    }
+    .profile_wrap h2 {
+        display: none;
+    }
     .profile_wrap>div {
         width: 100%;
         float: left;
     }
+    .profile_img p {
+        text-align: center;
+    }
+
+    .profile_img p:nth-of-type(1) {
+        font-family: GongGothicMedium;
+        font-weight: 400;
+        font-size: 26px;
+        margin-top: 20px;
+    }
+
+    .profile_img p:nth-of-type(2) {
+        font-family: GongGothicMedium;
+        font-weight: 300;
+        font-size: 19px;
+        margin-top: 5px;
+    }
     .profile_wrap h3 {
-        font-size: 25px;
-        margin: 25px 0 15px 10px;
+        font-family: GongGothicMedium;
+        font-weight: 300;
+        font-size: 27px;
+        margin: 80px 0 35px 0;
     }
     .profile_img img{
-        width:100%;
-        height:100%;
+        width: 90%;
     }
     .profile_img li{
-        width:200px;
-        height:265px;
-        border:1px solid #999;
-        border-radius:23px;
-        overflow:hidden;
-        margin:40px auto;
+        width: 57%;
+        border-radius: 23px;
+        overflow: hidden;
+        margin: 125px auto 30px auto;
     }
-    
-    .profile_info dt {
-        font-size: 18px;
-        line-height: 25px;
-    }
-
-    .profile_info dd {
-        line-height: 25px;
+    .profile_career dl {
+        height: 300px;
+        text-align: left;
+        text-indent: 10px;
+        font-family: Pretendard;
+        font-weight: 400;
+        font-size: 15px;
     }
     .profile_career dt {
-        font-size: 18px;
-        line-height: 25px;
+        height: 45px;
+        width: 40%;
+        float: left;
     }
-
     .profile_career dd {
-        line-height: 25px;
+        height: 45px;
+        width: 60%;
+        float: left;
     }
     
     /* job  -------------------------------------*/
-    .job_chart{
-        width:90%;
-        margin:0 5%;
-        color:#fff;
+    #container section:nth-of-type(3) {
+        height: 1193px;
     }
-    .job_chart ul{
-        margin-top: 30px;
+    .job {
+        color: #000;
+        background: #F3F6F9;
     }
-    .job_chart li{
-        width:100%;
-        height:40px;
-        margin:10px 0;
-        line-height:40px;
-        color:#fff;
-    }
-    .job_chart li p{
-        text-align:left;
-        text-indent:10px;
-        overflow:hidden;
-        font-weight: bold;
-        border-radius: 7px;
-        opacity: 0.87;
-        height: 40px;
-        line-height: 45px;
-    } 
-    .job_chart li:nth-child(1) p{
-        width:80%; background:#ff782f;
-    }
-    .job_chart li:nth-child(2) p{
-        width:90%; background:#0760ff;
-    }
-    .job_chart li:nth-child(3) p{
-        width:95%; background:#ffce52;
-    }
-    .job_chart li:nth-child(4) p{
-        width:85%; background:#59b254;
+    .job_wrap h2 {
+        text-align: center;
+        font-family: Pretendard;
+        font-size: 35px;
+        font-weight: 800;
+        color: #222222;
+        padding: 70px 0 50px 0;
     }
 
-    .job_info{
+    .job_info {
         color: #000;
     }
-    .job_info li{
-        padding-top: 15px;
-        background:rgba(171, 221, 207, 0.4);
-        width:90%;
-        margin:5px 5%;
-        border-radius:23px; 
+    .job_info li {
+        padding: 5% 4%;
+        background: #fff;
+        width: 45%;
+        height: 460px;
+        margin: 5px 2.5%;
+        float: left;
+        border-radius: 20px;
+        border: 1px solid #E2E5EC;
+        box-sizing: border-box;
+        box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.05);
     }
-    .job_info li:nth-child(4) img {
-        width: 50px;
-        height: 50px;
-        padding: 7px;
+    .job_info li p:nth-of-type(1) {
+        font-family: Pretendard;
+        font-size: 23px;
+        font-weight: 800;
+        margin: 15px 0 15px 0;
+        color: #222222;
     }
-    .job_info li p:first-child{
-        font-size:20px;
-        height:60px;
-        line-height:60px;
+    .job_info li p:last-child {
+        font-family: Pretendard;
+        font-size: 18px;
+        font-weight: 400;
+        color: #555555;
+        line-height: 26px;
     }
-    .job_info li p:last-child{
-        padding:0 20px;
-        color:#000;
-        padding-bottom:15px; }
-    .job_info li p:last-child br{ display:none; }
+    .job_info li p:last-child br {
+        display:none;
+    }
     
     
     
     
     /* port  -------------------------------------*/
+
+    #container section:nth-of-type(4) {
+        height: 1276px;
+    }
+
     .port {
         color: #000;
+    }
+    .port h2 {
+        text-align: center;
+        font-family: Pretendard;
+        font-size: 35px;
+        font-weight: 800;
+        color: #222222;
+        padding: 70px 0 50px 0;
     }
     .port_btn{
         width: 90%;
@@ -1191,14 +1220,6 @@ section{ clear:both; width:100%; }
         font-size: 18px;
         color: #999999;
     }
-    .typing {
-        /*position: absolute;*/
-        display: inline-block;
-        animation-name: cursor;
-        animation-duration: 1s;
-        animation-iteration-count: infinite;
-        font-size: 40px;
-    }
 
     
     /* 4. profile  -------------------------------------*/
@@ -1316,43 +1337,7 @@ section{ clear:both; width:100%; }
         font-size: 40px;
         font-weight: 800;
         color: #222222;
-    }/* 
-    .job_chart{
-        width:90%;
-        margin:0 5% 50px 5%;
     }
-    .job_chart li{
-        width:100%;
-        height:40px;
-        
-        margin:10px 0;
-        line-height:40px;
-        color:#fff;
-    }
-    .job_chart li p{
-        text-align:left;
-        text-indent:10px;
-        overflow:hidden;
-        font-weight: bold;
-        border-radius: 7px;
-        opacity: 0.87;
-    }
-    .job_chart li:nth-child(1) p{
-        width:90%;
-        background:#ff782f;
-    }
-    .job_chart li:nth-child(2) p{
-        width:95%;
-        background:#0760ff;
-    }
-    .job_chart li:nth-child(3) p{
-        width:85%;
-        background:#ffce52;
-    }
-    .job_chart li:nth-child(4) p{
-        width:80%;
-        background:#59b254;
-    } */
     
 
     .job_info li {
